[build-system]
requires = ["setuptools", "wheel", "cython~=0.29.24", "oldest-supported-numpy"]


[project]
name = "example_package_mdsumner"
version = "0.0.1"
authors = [
  { name="Michael D. Sumner", email="mdsumner@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mdsumner/example_package_mdsumner"
"Bug Tracker" = "https://github.com/mdsumner/example_package_mdsumner/issues"
